<resources>
    <string name="app_name">AlbumGerApp</string>
    <string name="txtBEntrar">Entrar</string>
    <string name="txtBCC">Criar Conta</string>
    <string name="txtNome">Nome :</string>
    <string name="txtUser">Usuario :</string>
    <string name="txtEmail">Email :</string>
    <string name="txtSenha">Senha :</string>
    <string name="txtReSenha">Comfirmar Senha :</string>
    <string name="txtBCCC">Criar Conta</string>
    <string name="txtBV">Voltar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>